--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.5.2
+dj-database-url==1.0.0
 Django==4.1
+django-heroku==0.3.1
 djangorestframework==3.13.1
 psycopg2==2.9.3
 pytz==2022.2.1
